--- a/advanced-front-end-development-projects/javascript-calculator/index.html
+++ b/advanced-front-end-development-projects/javascript-calculator/index.html
@@ -4,20 +4,21 @@
   <title>JavaScript Calculator</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet">
 </head>
 <body>
 
 <div class="container">
   <div class="calculator">
-      <h3>JavaScript Calculator</h3>
+      <h3>ELECTRONIC CALCULATOR</h3>
       <div class="row">
         <div id="output" class="text-right"></div>
       </div>
       <div class="row">
         <button id="ac">AC</button>
         <button id="ce">CE</button>
-        <button class="operator" id="divide" value="/">/</button>
-        <button class="operator" id="multiply" value="*">*</button>
+        <button class="operator" id="divide" value="/">&divide;</button>
+        <button class="operator" id="multiply" value="*">&times;</button>
       </div>
       <div class="row">
         <button class="numbers" id="seven" value="7">7</button>
@@ -37,15 +38,19 @@
         <button class="numbers" id="three" value="3">3</button>
         <button id="equals">=</button>
       </div>
-      <div class="row">
+      <div class="row last-row">
         <button class="numbers" id="zero" value="0">0</button>
-        <button class="operator" id="decimal" value=".">.</button>
+        <button id="decimal" value=".">.</button>
       </div>
   </div>
 </div>
+<footer class="text-center footer">
+  <p>Written and coded by <a href="http://www.freecodecamp.com/wildlifehexagon" target="_blank">wildlifehexagon</a> for <a href="http://www.freecodecamp.com/" target="_blank">Free Code Camp</a>.</p>
+</footer>
 
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://use.fontawesome.com/daec35af1e.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
