--- a/advanced-front-end-development-projects/javascript-calculator/index.html
+++ b/advanced-front-end-development-projects/javascript-calculator/index.html
@@ -12,7 +12,10 @@
   <div class="calculator">
       <h3>ELECTRONIC CALCULATOR</h3>
       <div class="row">
-        <div id="output" class="text-right"></div>
+        <div id="screen" class="text-right">
+          <div id="output" class="text-right"></div>
+          <div id="history" class="text-right"></div>
+        </div>
       </div>
       <div class="row">
         <button id="ac">AC</button>
