latest calculator build

--- a/advanced-front-end-development-projects/javascript-calculator/index.html
+++ b/advanced-front-end-development-projects/javascript-calculator/index.html
@@ -51,7 +51,7 @@
   <p>Written and coded by <a href="http://www.freecodecamp.com/wildlifehexagon" target="_blank">wildlifehexagon</a> for <a href="http://www.freecodecamp.com/" target="_blank">Free Code Camp</a>.</p>
 </footer>
 
-<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/daec35af1e.js"></script>
 <script src="script.js"></script>
