final version of calculator

--- a/advanced-front-end-development-projects/javascript-calculator/index.html
+++ b/advanced-front-end-development-projects/javascript-calculator/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/daec35af1e.css">
 </head>
 <body>
 
@@ -48,12 +49,11 @@
   </div>
 </div>
 <footer class="text-center footer">
-  <p>Written and coded by <a href="http://www.freecodecamp.com/wildlifehexagon" target="_blank">wildlifehexagon</a> for <a href="http://www.freecodecamp.com/" target="_blank">Free Code Camp</a>.</p>
+  <p>Written and coded by <a href="http://www.freecodecamp.com/wildlifehexagon" target="_blank">wildlifehexagon</a> (Eric Hartline) for <a href="http://www.freecodecamp.com/" target="_blank">Free Code Camp</a> <i class="fa fa-free-code-camp" aria-hidden="true">.</i></p>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://use.fontawesome.com/daec35af1e.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
