--- a/advanced-front-end-development-projects/pomodoro-clock/index.html
+++ b/advanced-front-end-development-projects/pomodoro-clock/index.html
@@ -12,20 +12,27 @@
 <div class="container">
   <h1>Pomodoro Clock</h1>
   <div class="row">
-    <div id="break">Break Length
-      <p><button id="breakMinus">-</button>
-        <span id="breakLength"></span>
-        <button id="breakPlus">+</button></p>
-    </div>
-    <div id="session">Session Length</div>
-    <p><button id="sessionMinus">-</button>
-      <span id="sessionLength"></span>
-      <button id="sessionPlus">+</button></p>
+    <div id="break-label">Break Length</div>
+      <p><button id="break-decrement">-</button>
+        <span id="break-length"></span>
+        <button id="break-increment">+</button></p>
   </div>
   <div class="row">
-    <h3><button id="session">Session</button></h3>
-    <div id="clock"></div>
+    <div id="session-label">Session Length</div>
+    <p><button id="session-decrement">-</button>
+      <span id="session-length"></span>
+      <button id="session-increment">+</button></p>
   </div>
+  <div class="row">
+    <h3><button id="timer-label">Session</button></h3>
+    <div id="time-left"></div>
+    <button id="start_stop">Start/Stop</button>
+    <button id="reset">Reset</button>
+  </div>
+  <audio id="beep">
+    <source src="http://quickz.id.lv/other/audio/Electric%20Alarm%20Clock%20Sound%20Effect.wav">
+    Your browser does not support the audio element.
+  </audio>
 </div>
 <footer class="text-center footer">
   <p>Written and coded by <a href="http://www.freecodecamp.com/wildlifehexagon" target="_blank">wildlifehexagon</a> (Eric Hartline) for <a href="http://www.freecodecamp.com/" target="_blank">Free Code Camp</a> <i class="fa fa-free-code-camp" aria-hidden="true">.</i></p>
