--- a/advanced-front-end-development-projects/pomodoro-clock/index.html
+++ b/advanced-front-end-development-projects/pomodoro-clock/index.html
@@ -24,8 +24,8 @@
       <button id="session-increment">+</button></p>
   </div>
   <div class="row">
-    <h3><button id="timer-label">Session</button></h3>
-    <div id="time-left"></div>
+    <h3><span id="timer-label">Session</span></h3>
+    <div id="time-left">25:00</div>
     <button id="start_stop">Start/Stop</button>
     <button id="reset">Reset</button>
   </div>
@@ -41,5 +41,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="script.js"></script>
+<script src="https://rawgit.com/no-stack-dub-sack/testable-projects-fcc/master/build/bundle.js"></script>
 </body>
 </html>
