more pomodoro work

--- a/advanced-front-end-development-projects/pomodoro-clock/index.html
+++ b/advanced-front-end-development-projects/pomodoro-clock/index.html
@@ -30,7 +30,7 @@
     <button id="reset">Reset</button>
   </div>
   <audio id="beep">
-    <source src="http://quickz.id.lv/other/audio/Electric%20Alarm%20Clock%20Sound%20Effect.wav">
+    <source src="https://www.soundjay.com/button/beep-06.wav" autostart="false">
     Your browser does not support the audio element.
   </audio>
 </div>
