--- a/advanced-front-end-development-projects/pomodoro-clock/index.html
+++ b/advanced-front-end-development-projects/pomodoro-clock/index.html
@@ -25,7 +25,7 @@
   </div>
   <div class="row">
     <h3><span id="timer-label">Session</span></h3>
-    <div id="time-left">25:00</div>
+    <div id="time-left"></div>
     <button id="start_stop">Start/Stop</button>
     <button id="reset">Reset</button>
   </div>
