pomodoro clock update, now passes all test cases

--- a/advanced-front-end-development-projects/pomodoro-clock/index.html
+++ b/advanced-front-end-development-projects/pomodoro-clock/index.html
@@ -25,8 +25,8 @@
   </div>
   <div class="row">
     <h3><span id="timer-label">Session</span></h3>
-    <div id="time-left"></div>
-    <button id="start_stop">Start/Stop</button>
+    <div id="time-left">25:00</div>
+    <button id="start_stop">Start</button>
     <button id="reset">Reset</button>
   </div>
   <audio id="beep">
