--- a/advanced-front-end-development-projects/javascript-calculator/index.html
+++ b/advanced-front-end-development-projects/javascript-calculator/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>JavaScript Calculator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet">
