--- a/intermediate-front-end-development-projects/random-quote-generator/index.html
+++ b/intermediate-front-end-development-projects/random-quote-generator/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Bukowski Quote Generator</title>
   <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="scripts/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
